[package]
name = "recurring-tasks"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"

[workspace]
members = ["examples/db", "examples/simple"]
