[package]
name = "recurring-tasks"
version = "1.1.1"
edition = "2021"
license = "MIT"
description = "Define tasks and run them in an app forever, ala cronjobs. And don't run already/still running tasks."
repository = "https://github.com/rogusdev/recurring-tasks"
keywords = ["tasks", "jobs", "recurring", "periodic", "cronjob"]
categories = ["asynchronous", "command-line-utilities"]

[dependencies]
async-trait = "0.1.86"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"

[dev-dependencies]
mock_instant = "0.5.2"

[features]
default = ["instant"]
instant = []
system = []

[workspace]
members = ["examples/db", "examples/simple"]
