[package]
name = "recurring-tasks"
version = "1.3.0"
edition = "2024"
license = "MIT"
description = "Define tasks and run them in an app forever, ala cronjobs. And don't run already/still running tasks."
repository = "https://github.com/rogusdev/recurring-tasks"
keywords = ["tasks", "jobs", "recurring", "periodic", "cronjob"]
categories = ["asynchronous", "command-line-utilities"]

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.16"
tracing = "0.1.41"

[dev-dependencies]
mock_instant = "0.6.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[features]
default = ["instant"]
instant = []
system = []

[workspace]
members = ["apps/*"]
