[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
recurring-tasks = { path = "../../" }

async-trait = "0.1.86"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
